--- a/style.css
+++ b/style.css
@@ -7,12 +7,15 @@
 }
 .main {}
 
-.sale {}
+.sale {
+    justify-content: center;
+    display: flex;
+}
 
 .container {}
 
 .sale-title {
-    font-family: 'Epilogue' sans-serif;
+    font-family: 'Epilogue';
     font-style: normal;
     font-weight: 600;
     font-size: 32px;
@@ -23,42 +26,176 @@
     order: 0;
     flex-grow: 0;
 }
-
+.watch{
+    width: 80px;
+    height: 80px;
+}
+.watch5{
+    width: 235px;
+    height: 350px;
+}
 .sale-block-img {
     display: flex;
 }
 
 .list-img {
     list-style-type: none;
+    margin: 0px;
+    padding: 0px;
+    display: grid;
+    gap: 10px;
+    margin-right: 20px;
 }
 
-.img-item {}
+.img-item {
+    width: 80px;
+    height: 80px;
+}
 
 .sale-container-text {}
 
-.sale-product-block {}
+.sale-product-block {
+    margin-bottom: 40px;
+}
 
-.product-title {}
+.product-title {
+    font-family: 'Epilogue';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 24px;
+    letter-spacing: -0.02em;
+    color: #141414;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    margin: 40px 0px 0px 0px;
+}
 
-.product-text {}
+.product-text {
+    font-family: 'Epilogue';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+    letter-spacing: -0.02em;
+    color: rgba(20, 20, 20, 0.5);
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    margin: 8px 0px 0px 0px;
+}
 
-.sale-container-cash {}
+.sale-container-cash {
+    display: flex;
+    margin-top: 16px;
+}
 
-.cash-text {}
+.cash-text {
+    font-family: 'Epilogue';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
+    letter-spacing: -0.02em;
+    color: #141414;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    margin: 0px;
+}
 
-.sale-text-cash {}
+.sale-text-cash {
+    font-family: 'Epilogue';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: -0.02em;
+    text-decoration-line: line-through;
+    color: rgba(20, 20, 20, 0.5);
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+    display: flex;
+    align-items: center;
+    margin: 0px;
+}
 
-.description-sale {}
+.description-sale {
+    margin-bottom: 40px;
+}
+.description-sale::before{
+    content: '';
+    width: 100%;
+    height: 0.1px;
+    background-color: #151515;
+    display: block;
+    margin-bottom: 8px
+}
 
-.description-title {}
+.description-title {
+    font-family: 'Epilogue';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
+    letter-spacing: -0.02em;
+    text-transform: uppercase;
+    color: #141414;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    margin: 0px;
+}
 
-.description-text {}
+.description-text {
+    font-family: 'Epilogue';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+    letter-spacing: -0.01em;
+    color: rgba(20, 20, 20, 0.5);
+    width: 335px;
+    margin: 17px 0px 0px 0px;
+}
 
 .details-sale {}
+.details-sale::before {
+    content: '';
+    width: 100%;
+    height: 0.1px;
+    background-color: #151515;
+    display: block;
+    margin-bottom: 8px
+}
 
-.details-title {}
+.details-title {
+    font-family: 'Epilogue';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
+    letter-spacing: -0.02em;
+    text-transform: uppercase;
+    color: #141414;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    margin: 0px;
+}
 
-.details-text {}
+.details-text {
+    font-family: 'Epilogue';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+    letter-spacing: -0.01em;
+    color: rgba(20, 20, 20, 0.5);
+    margin: 17px 0px 0px 0px;
+}
 
 @media screen and (min-width: 375px) {
     .container {
